; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/persistent-data/extr_dm-transaction-manager.c_dm_tm_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/persistent-data/extr_dm-transaction-manager.c_dm_tm_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_transaction_manager = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dm_tm_destroy(%struct.dm_transaction_manager* %0) #0 {
  %2 = alloca %struct.dm_transaction_manager*, align 8
  store %struct.dm_transaction_manager* %0, %struct.dm_transaction_manager** %2, align 8
  %3 = load %struct.dm_transaction_manager*, %struct.dm_transaction_manager** %2, align 8
  %4 = getelementptr inbounds %struct.dm_transaction_manager, %struct.dm_transaction_manager* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load %struct.dm_transaction_manager*, %struct.dm_transaction_manager** %2, align 8
  %9 = call i32 @wipe_shadow_table(%struct.dm_transaction_manager* %8)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load %struct.dm_transaction_manager*, %struct.dm_transaction_manager** %2, align 8
  %12 = call i32 @kfree(%struct.dm_transaction_manager* %11)
  ret void
}

declare dso_local i32 @wipe_shadow_table(%struct.dm_transaction_manager*) #1

declare dso_local i32 @kfree(%struct.dm_transaction_manager*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
